--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "license": "BSD",
   "dependencies": {
     "express": "4.13.4",
+    "redis": "^2.8.0",
     "socket.io": "^1.7.2",
     "socket.io-redis": "^3.0.0"
   },
