init with db rooms (mocked)

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,4 @@
-FROM mhart/alpine-node:6
+FROM node:10
 
 # Create app directory
 RUN mkdir -p /usr/src/app
@@ -6,6 +6,7 @@ WORKDIR /usr/src/app
 
 # Install app dependencies
 COPY package.json /usr/src/app/
+RUN apt-get update && apt-get install -y git
 RUN npm install
 
 # Bundle app source
