--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 nginx:
   build: ./nginx
   links:
@@ -9,15 +8,8 @@ nginx:
   ports:
    - "3000:80"
 
-emiter:
-  build: ./emiter
-  links:
-    - redis
-  expose:
-    - "3000"
-
 server-john:
-  build: ./server
+  build: ./src
   links:
     - redis
   expose:
@@ -26,7 +18,7 @@ server-john:
     - NAME=John
 
 server-paul:
-  build: ./server
+  build: ./src
   links:
     - redis
   expose:
@@ -35,7 +27,7 @@ server-paul:
     - NAME=Paul
 
 server-george:
-  build: ./server
+  build: ./src
   links:
     - redis
   expose:
@@ -44,7 +36,7 @@ server-george:
     - NAME=George
 
 server-ringo:
-  build: ./server
+  build: ./src
   links:
     - redis
   expose:
